# clawdeck

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.web  README.md  config.yaml.example  deploy-azure.sh  docker-compose.web.yml  pyproject.toml  read_docx.py  read_docx_robust.py  read_excel_script.py  terminal-motd.sh
clawdeck/: __init__.py  agent.py  browser_auth.py  browser_task_executor.py  browser_use.py  buddy.py  cli.py  compaction.py  config.py  credential_manager.py  cron_agent.py  document_readers.py  dream.py  hooks.py  lsp_client.py  memory.py  planner.py  plugin_system.py  rewind.py  session_manager.py  skills.py  subagent.py  token_budget.py  utils.py  vim_mode.py  vision_engine.py  voice.py
docusaurus-docs/: MIGRATION_SUMMARY.md  docusaurus.config.ts
scripts/: build_search_index.py
tests/: __init__.py  simple_test.py  test_adaptive_chunking.py  test_agent.py  test_agent_browse_and_find.py  test_agent_dom_integration.py  test_automation_orchestrator.py  test_bedrock.py  test_browser_auth.py  test_browser_automation_tools.py  test_browser_controller.py  test_browser_optimization.py  test_browser_task_executor.py  test_browser_use.py  test_cache_compression.py  test_chunk_cache.py  test_chunk_retriever.py  test_chunk_summarizer.py  test_cli.py  test_code_templates.py  test_confidence_integration.py  test_config.py  test_content_aware_chunking.py  test_credential_manager.py  test_document_chunker.py  test_dom_analyzer.py  test_dom_token_counting.py  test_dream.py  test_embedding_model.py  test_enhanced_automation_orchestrator.py  test_excel_reader.py  (+46 more)
(+55 files in other folders)
